tests/models/enum/named/u16/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        u16
    ),
}
fn main() {}
